first commint of base table

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngrx/store": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "form-ui": "file:public/form-ui-0.0.1.tgz",
     "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
