--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.1",
     "@angular/cdk": "^20.2.3",
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
