--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@ngrx/store": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "chart.js": "^4.5.0",
     "form-ui": "file:public/form-ui-0.0.1.tgz",
     "json-server": "^1.0.0-beta.3",
+    "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
